# cache_model

./: .env  .gitignore  docker-compose.yml  grafana.md  readme.md
data/app/: Dockerfile  alembic.ini  pyproject.toml
data/app/app/: config.py  database.py  exceptions.py  main.py  models.py  schemas.py
data/app/app/migrations/: env.py
data/app/app/migrations/versions/: 87680b7ffa59_.py
data/app/app/repositories/: base.py
data/jenkins/: identity.key.enc  jenkins.telemetry.Correlator.xml  secret.key
data/jenkins/.java/fonts/17.0.10/fcinfo-1-02c6979c22cf-Debian GNU/: Linux-12-en-.properties
data/jenkins/.java/fonts/17.0.10/fcinfo-1-03c675c593af-Debian GNU/: Linux-12-en-.properties
data/jenkins/.java/fonts/17.0.10/fcinfo-1-0b3489709dda-Debian GNU/: Linux-12-en-.properties
data/jenkins/.java/fonts/17.0.10/fcinfo-1-16f3e7800bda-Debian GNU/: Linux-12-en-.properties
data/jenkins/jobs/Кэш на уровне nginx/: config.xml
data/jenkins/jobs/Кэш на уровне приложения/: config.xml
data/jenkins/jobs/Кэш на уровне приложения/builds/1/: build.xml  log
data/jenkins/jobs/Никакого кэша нет/: config.xml
data/jenkins/jobs/Показать примеры запросов dns/: config.xml
data/jenkins/jobs/Показать статистику памяти машины/: config.xml
data/jenkins/logs/tasks/: Periodic background build discarder.log.1  Periodic background build discarder.log.2  Periodic background build discarder.log.3  Periodic background build discarder.log.4  Periodic background build discarder.log.5  Workspace clean-up.log.1
data/jenkins/secrets/: hudson.console.AnnotatedLargeText.consoleAnnotator  hudson.console.ConsoleNote.MAC  hudson.model.Job.serverCookie  hudson.util.Secret  jenkins.model.Jenkins.crumbSalt  master.key  org.jenkinsci.main.modules.instance_identity.InstanceIdentity.KEY  org.springframework.security.web.authentication.rememberme.TokenBasedRememberMeServices.mac
data/jenkins/updates/: default.json
data/jenkins/users/: users.xml
data/jenkins/users/admin_3723877344999507707/: config.xml
data/jenkins_docker/: Dockerfile
data/k6/: test.js
data/nginx/prepared_conf/: cache_app.conf  full_no_cache.conf  nginx_cache.conf
data/nginx/reload/: reload.sh
data/nginx_app/conf/: default.conf
data/prometheus/: prometheus.yml
(+51 files in other folders)
